Fix recipe images with multiple images on mobile

--- a/src/style/recipe.scss
+++ b/src/style/recipe.scss
@@ -101,15 +101,25 @@
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         grid-template-rows: repeat(auto-fit, minmax(300px, 1fr));
         grid-auto-flow: dense;
+        div {
+            height: 100%;
+            width: 100%;
+        }
          .horizontal {
-            grid-column: 1 / -1;
+            @media (min-width: 1300px) {
+                grid-column: 1 / -1;
+            }
          }
          .vertical {
-            grid-row: 1 / -1;
+            @media (min-width: 1300px) {
+                grid-row: 1 / -1;
+            }
          }
         .big {
-            grid-column: span 2;
-            grid-row: span 2;
+            @media (min-width: 1300px) {
+                grid-column: span 2;
+                grid-row: span 2;
+            }
         }
         img {
             object-fit: cover;
@@ -120,7 +130,8 @@
             grid-column: 1 / -1;
             grid-row: 1 / 2;
             max-height: 400px;
-
+            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
         }
     }
     @media (max-width: 1300px) {
